packages/typ/tests/fixtures/diagnostics/0165_adt_record_pattern_annotation_mismatch_04.ml.infer.expected
File "0165_adt_record_pattern_annotation_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0165_adt_record_pattern_annotation_mismatch_04 is not a valid module name.

File "0165_adt_record_pattern_annotation_mismatch_04.ml", line 2, characters 14-28:
2 | let { value = (delta : bool); mark = other_delta } =
                  ^^^^^^^^^^^^^^
Error: This pattern matches values of type bool
       but a pattern was expected which matches values of type int
