packages/typ/tests/fixtures/diagnostics/0165_adt_record_pattern_annotation_mismatch_04.ml
type rec_delta = { value : int; mark : bool }
let { value = (delta : bool); mark = other_delta } =
  { value = 3; mark = false }
